fix(front): #3236 fix styles for tables
Former-commit-id: a4d71c0d39a583e303fb8a8521949110fc2e0031

--- a/new/theme/2020/static/scss/base.scss
+++ b/new/theme/2020/static/scss/base.scss
@@ -461,16 +461,27 @@ $codeyellow: rgba(230, 219, 116, 1);
     border-spacing: 0;
     border-style: solid;
     border-width: 1px;
-    text-align: center;
+    display: block;
+    overflow-x: auto;
+    text-align: left;
     thead {
+      font-size: 1.125rem;
       background-color: $headergray;
+      th{
+        padding: 2rem;
+        text-align: center;
+      }
     }
     tbody tr {
-      background-color: $fluid-light-gray;
+      background-color: $graylight;
     }
 
     tbody tr:nth-child(even){
-      background-color: $graylight;
+      background-color: $fluid-light-gray;
+    }
+
+    tbody td {
+      padding: 2rem;
     }
   }
 
