--- a/new/theme/2020/templates/article.html
+++ b/new/theme/2020/templates/article.html
@@ -86,7 +86,7 @@
 
 {% block content %}
 <div class="bg-graylight">
-  <div class="roboto internal mw-banner ml-auto mr-auto roboto bg-white ph4 pt5-l pt4 pb5">
+  <div class="roboto internal mw-banner ml-auto mr-auto roboto bg-white ph4-l ph3 pt5-l pt4 pb5">
     <h1 class="roboto tc">{{ article.title }}</h1>
     <div class="lh-2">
       {{ article.content }}
