fix(front): #3252 fix navigation
- Fixed broken links in the breadcrumb and the footer for default pages


Former-commit-id: 81c72f2ed89962697184b8ecf6cc09682aa159ae

--- a/new/theme/2020/templates/article.html
+++ b/new/theme/2020/templates/article.html
@@ -52,14 +52,14 @@
         </li>
         <li class="dib mt0">
           <a class="c-fluid-gray hover-white no-underline"
-             href="{{ SITEURL }}/">
+             href="{{ SITEURL }}/blog/">
             Blog
           </a>
           <span class="c-fluid-gray v-mid b"> / </span>
         </li>
         <li class="dib mt0">
           <a class="white hover-white no-underline"
-             href="{{ SITEURL }}/">
+             href=".">
             {{ article.title }}
           </a>
         </li>
