--- a/new/theme/2020/templates/footer.html
+++ b/new/theme/2020/templates/footer.html
@@ -110,19 +110,19 @@
           About Us
         </a><br>
         <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
-          href="{{ SITEURL }}/use-cases/certifications">
+          href="{{ SITEURL }}/about-us/certifications">
           Certifications
         </a><br>
         <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
-          href="{{ SITEURL }}/use-cases/differentiators/">
+          href="{{ SITEURL }}/about-us/differentiators/">
           Differentiators
         </a><br>
         <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
-          href="{{ SITEURL }}/values/">
+          href="{{ SITEURL }}/about-us/values/">
           Values
         </a><br>
         <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
-          href="{{ SITEURL }}/reviews/">
+          href="{{ SITEURL }}/about-us/reviews/">
           Reviews
         </a><br>
         <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
@@ -130,15 +130,15 @@
           Resources
         </a><br>
         <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
-        href="{{ SITEURL }}/events/">
+        href="{{ SITEURL }}/about-us/events/">
           Events
         </a><br>
         <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
-        href="{{ SITEURL }}/people/">
+        href="{{ SITEURL }}/about-us/people/">
           People
         </a><br>
         <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
-        href="{{ SITEURL }}/partners/">
+        href="{{ SITEURL }}/about-us/partners/">
           Partners
         </a><br>
       </div>
