--- a/new/theme/2020/static/scss/base.scss
+++ b/new/theme/2020/static/scss/base.scss
@@ -446,6 +446,7 @@ $codeyellow: rgba(230, 219, 116, 1);
     font-size: .875rem;
     font-weight: 400;
     padding-bottom: 4rem;
+    text-align: center;
   }
 
   blockquote {
