--- a/new/theme/2020/templates/base.html
+++ b/new/theme/2020/templates/base.html
@@ -154,6 +154,10 @@
       <script type="text/javascript"
               src="{{ SITEURL }}/{{ ASSET_URL }}"></script>
     {% endassets %}
+    {% assets output="static/js/anchor.min.js", "js/tmp/anchor.min.js" %}
+    <script type="text/javascript"
+              src="{{ SITEURL }}/{{ ASSET_URL }}"></script>
+    {% endassets %}
     <!-- Navigation -->
       {% include "menu.html" %}
       <div>
