--- a/new/theme/2020/templates/menu.html
+++ b/new/theme/2020/templates/menu.html
@@ -28,7 +28,7 @@
             </label>
         </div>
         <div class="overlay overlay-hugeinc bg-white fixed w-100 h-100 top-0 left-0 z-100 overflow-y-hidden-l overflow-y-auto">
-          <div class="mw9 tr ml-auto mr-auto mv-menu ph3">
+          <div class="mw9 tr ml-auto mr-auto ph3">
             <label for="op" class="mr5-l right-small">
               <img
                 class="lower-img w2-l w1 mv4-l pv2-l mv3 pv-4-m right-small pointer"
