fix(front): #3260 styles for tables
- This points to only generated tables instead of table elements used
by AsciiDoc for multiple types of blocks


Former-commit-id: ede904948ab0e04412fab4b05444b9b605bebdd8

--- a/new/theme/2020/static/scss/base.scss
+++ b/new/theme/2020/static/scss/base.scss
@@ -456,7 +456,7 @@ $codeyellow: rgba(230, 219, 116, 1);
     line-height: 1.8rem;
     padding: 1.5rem;
   }
-  table {
+  table.tableblock {
     border-collapse: collapse;
     border-color: $bordertable;
     border-spacing: 0;
@@ -464,7 +464,9 @@ $codeyellow: rgba(230, 219, 116, 1);
     border-width: 1px;
     display: block;
     overflow-x: auto;
+    overflow-y: hidden;
     text-align: left;
+    width: fit-content;
     thead {
       font-size: 1.125rem;
       background-color: $headergray;
