feat(front): #3147.11 findings pages
Former-commit-id: a74939257cf32938a9bec217bd1729b18e91ce8a

--- a/new/theme/2020/templates/page.html
+++ b/new/theme/2020/templates/page.html
@@ -43,6 +43,15 @@
           </a>
           <span class="c-fluid-gray v-mid b"> / </span>
         </li>
+        {% if page.findings %}
+        <li class="dib mt0" >
+          <a class="c-fluid-gray hover-white no-underline"
+              href="{{ SITEURL }}/findings/">
+              Findings
+          </a>
+          <span class="c-fluid-gray v-mid b"> / </span>
+        </li>
+        {% endif %}
         {% if "misc" not in page.category.name and not page.defends %}
         <li class="dib mt0" >
           {% if page.rules %}
