feat(front): #2045 loading 3 frames in login page
- This strange commit allows an attacker to not distinguish
between a logged user and an unlogged one by setting login page
frames to 3 as well as all other pages have (window.frames.length)
- fixes daimon/findings/529245978/


Former-commit-id: 6302cfaf13b8d7333ff52819da8adb43fbd782e0

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -23,6 +23,7 @@
     <style> body { background-color: #272727; }</style>
   </head>
   <body id="FluidIntegrates">
+    <iframe hidden></iframe><iframe hidden></iframe><iframe hidden></iframe>
     <div id="root"></div>
     {% if 'localhost' in request.get_host and debug %}
       <script src="https://localhost:3000/dashboard/login-bundle.min.js" type="text/javascript"></script>
