--- a/new/theme/2020/static/scss/base.scss
+++ b/new/theme/2020/static/scss/base.scss
@@ -408,6 +408,7 @@ $codeyellow: rgba(230, 219, 116, 1);
     font-size: 18px;
     font-family: monospace;
     padding: 5px;
+    font-weight: 400;
   }
 
   h1 {
