fix(front): #3179 people table
- Allign table in People's page


Former-commit-id: 2c06d18b1541ebfc82cea5f09555b602d24465a2

--- a/new/theme/2020/static/scss/base.scss
+++ b/new/theme/2020/static/scss/base.scss
@@ -414,6 +414,13 @@ $codeyellow: rgba(230, 219, 116, 1);
     padding-top: 2rem;
   }
 
+  .tb-ppl {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    white-space: nowrap;
+  }
+
   code.hljs {
     background-color: white;
     font-family: monospace;
