fix(front): #3269 fix footer look
Former-commit-id: 0e4c8e0c1c7bc5e3b742c09ca7082ab074414f48

--- a/new/theme/2020/templates/footer.html
+++ b/new/theme/2020/templates/footer.html
@@ -87,15 +87,18 @@
         </a><br>
         <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
           href="{{ SITEURL }}/careers/knowledge-test/">
-          Knowledge Test
+          Knowledge<br>
+          Test
         </a><br>
         <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
           href="{{ SITEURL }}/careers/technical-challenges/">
-          Technical Challenges
+          Technical<br>
+          Challenges
         </a><br>
         <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
           href="{{ SITEURL }}/careers/non-technical-challenges/">
-          Non-Technical Challenges
+          Non-Technical<br>
+          Challenges
         </a><br>
         <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
         href="{{ SITEURL }}/careers/immersion/">
