feat(front): #2060 add zendesk locale
- Add United States locale to Zendesk


Former-commit-id: cb6a0eaa7397847741d703b62534ea9d49b739a2

--- a/app/templates/app.html
+++ b/app/templates/app.html
@@ -51,6 +51,7 @@
     <!-- End of fluidattacks Zendesk Widget script -->
     <script type="text/javascript">
       zE(function() {
+        zE.setLocale("en-US");
         zE.identify({
           name: fullName,
           email: userEmail
