--- a/new/theme/2020/static/scss/base.scss
+++ b/new/theme/2020/static/scss/base.scss
@@ -28,6 +28,7 @@ $headergray: rgba(230, 228, 228, 1);
 $bordertable: rgba(0, 0, 0, .1);
 $warningyellow: rgba(255, 200, 44, 1);
 $noteblue: rgba(224, 230, 237, 1);
+$grayshadow: rgba(176,176,176,0.1);
 //Monokai theme colors
 $codeblack: rgba(39, 40, 43, 1);
 $codebrown: rgba(117, 113, 94, 1);
@@ -179,6 +180,7 @@ $codeyellow: rgba(230, 219, 116, 1);
 .pv-bt { padding-top: .75rem; padding-bottom: .75rem; }
 .h-maxcontent { height: max-content; }
 .mw-banner { max-width: 56.25rem; }
+.shadowbox-blog { box-shadow: 0px 10px 10px $grayshadow;}
 
 // Tachyons custom responsive classes
 
