--- a/new/theme/2020/static/scss/base.scss
+++ b/new/theme/2020/static/scss/base.scss
@@ -29,6 +29,7 @@ $bordertable: rgba(0, 0, 0, .1);
 $warningyellow: rgba(255, 200, 44, 1);
 $noteblue: rgba(224, 230, 237, 1);
 $grayshadow: rgba(176,176,176,0.1);
+$darkshadow: rgba(176,176,176,0.3);
 //Monokai theme colors
 $codeblack: rgba(39, 40, 43, 1);
 $codebrown: rgba(117, 113, 94, 1);
@@ -181,6 +182,8 @@ $codeyellow: rgba(230, 219, 116, 1);
 .h-maxcontent { height: max-content; }
 .mw-banner { max-width: 56.25rem; }
 .shadowbox-blog { box-shadow: 0px 10px 10px $grayshadow;}
+.hover-card { &:hover {
+  box-shadow: 0px 20px 20px $darkshadow; } }
 
 // Tachyons custom responsive classes
 
@@ -223,7 +226,7 @@ $codeyellow: rgba(230, 219, 116, 1);
 
 //Large screens
 @media screen and (min-width: 60em) {
-  .h-28em-l { height: 28em; }
+  .h-34em-l { height: 34em; }
   .h-banner-l { height: 20em; }
   .three-columns-l { column-count: 3; }
   .hover-white-l { &:hover { color: $white; }}
