fix(front): #3223 pagination styles
Former-commit-id: 56612432946eacc1b328b6a3481e0cc7e7e73a59

--- a/new/theme/2020/templates/article.html
+++ b/new/theme/2020/templates/article.html
@@ -46,7 +46,7 @@
         <li class="dib mt0">
           <a class="c-fluid-gray hover-white no-underline"
              href="{{ SITEURL }}/">
-            <strong>Home</strong>
+            Home
           </a>
           <span class="c-fluid-gray v-mid b"> / </span>
         </li>
