--- a/new/theme/2020/templates/index.html
+++ b/new/theme/2020/templates/index.html
@@ -132,7 +132,7 @@ Blog | {{ SITENAME }}
     <ul class="pager mt3 mb3">
       <li class="next di">
         {% if articles_page.has_previous() %}
-          <a class="c-fluid-red roboto hv-fluid-dkred"
+          <a class="c-fluid-bk roboto hv-fluid-dkred"
              href= "{{ SITEURL }}/{{ articles_previous_page.url }} ">
              &lt; Previous
           </a>
@@ -140,18 +140,18 @@ Blog | {{ SITENAME }}
         {% for page_num in range(articles_paginator.num_pages) %}
           {% if loop.first %}
             <a href='{{ SITEURL }}/blog/index.html'
-               class="{{ 'current b' if page_num + 1 == articles_page.number else '' }} c-fluid-red roboto hv-fluid-dkred pr3 pl3">
+               class="{{ 'current b' if page_num + 1 == articles_page.number else '' }} c-fluid-bk roboto hv-fluid-dkred pr3 pl3">
                {{ page_num + 1 }}
             </a>
           {% else %}
             <a href='{{ SITEURL }}/blog/index{{ page_num + 1 }}.html'
-               class="{{ 'current b' if page_num + 1 == articles_page.number else '' }} c-fluid-red roboto hv-fluid-dkred pr3 pl3">
+               class="{{ 'current b' if page_num + 1 == articles_page.number else '' }} c-fluid-bk roboto hv-fluid-dkred pr3 pl3">
                {{ page_num + 1 }}
             </a>
           {% endif %}
         {% endfor %}
         {% if articles_page.has_next() %}
-          <a class="c-fluid-red roboto hv-fluid-dkred"
+          <a class="c-fluid-bk roboto hv-fluid-dkred"
              href="{{ SITEURL }}/{{ articles_next_page.url }} " >
              Next &gt;
           </a>
