fix(front): #3228.4 cards size
- Fix card sizes for big screens


Former-commit-id: c742e7b1d4d7ea31e4cf51a3cbbb724cfa3594df

--- a/new/theme/2020/static/scss/base.scss
+++ b/new/theme/2020/static/scss/base.scss
@@ -251,6 +251,7 @@ $codeyellow: rgba(230, 219, 116, 1);
 @media screen and (min-width: 120em) {
   .fheader-vl { font-size: 10rem; }
   .new-banner { width: 40em; }
+  .h-27-vl { height: 27em; }
 }
 // End Tachyons
 
