--- a/new/theme/2020/templates/index.html
+++ b/new/theme/2020/templates/index.html
@@ -59,7 +59,7 @@ Blog | {{ SITENAME }}
              class="br3 br--top">
       {% endif %}
       <!-- Article Preview: Title, Description, Author, Tags ... -->
-      <div class="h-34em-l ph4">
+      <div class="h-34em-l h-27-vl ph4">
         <a href="{{ SITEURL }}/{{ article.url }}"
            rel="bookmark"
            title="Permalink to {{ article.title|striptags }}"
