--- a/new/theme/2020/templates/footer.html
+++ b/new/theme/2020/templates/footer.html
@@ -113,7 +113,7 @@
           About Us
         </a><br>
         <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
-          href="{{ SITEURL }}/about-us/certifications">
+          href="{{ SITEURL }}/about-us/certifications/">
           Certifications
         </a><br>
         <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
@@ -129,7 +129,7 @@
           Reviews
         </a><br>
         <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
-        href="#">
+        href="{{ SITEURL }}/resources/">
           Resources
         </a><br>
         <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
