fix(front): #3279 include faq careers
- Include the content for the Faq Careers page


Former-commit-id: ed8f47fd2fd5bbdda6428e9fa1467ea508f952f6

--- a/new/theme/2020/templates/findings.html
+++ b/new/theme/2020/templates/findings.html
@@ -217,4 +217,15 @@
     {% endassets %}
   </article>
   {% endif %}
+  <div class="divpage internal roboto mb4">
+    <article class="ma-auto tl mw8">
+      <h1 class="tc pb4">
+        {{ page.title }}
+      </h1>
+      {{ page.content }}
+      {% for faqpage in pages if faqpage.faq %}
+        {{ faqpage.content }}
+      {% endfor %}
+    </article>
+  </div>
 {% endblock content %}
