--- a/new/theme/2020/templates/page.html
+++ b/new/theme/2020/templates/page.html
@@ -123,6 +123,9 @@
     <h1 class="roboto tc">{{ page.title }}</h1>
     <div class="lh-2 tl">
       {{ page.content }}
+      {% for faqpage in pages if faqpage.faq %}
+        {{ faqpage.content }}
+      {% endfor %}
     </div>
   </div>
 </div>
