fix(front): #3301 validation for faq page
Former-commit-id: 9a9e1b0cd8c4d0fe487e725530232ba5e9669993

--- a/new/theme/2020/templates/page.html
+++ b/new/theme/2020/templates/page.html
@@ -123,9 +123,11 @@
     <h1 class="roboto tc">{{ page.title }}</h1>
     <div class="lh-2 tl">
       {{ page.content }}
-      {% for faqpage in pages if faqpage.faq %}
-        {{ faqpage.content }}
-      {% endfor %}
+      {% if page.faqindex %}
+        {% for faqpage in pages if faqpage.faq %}
+          {{ faqpage.content }}
+        {% endfor %}
+      {% endif %}
     </div>
   </div>
 </div>
