feat(front): #3288 about us list in menu
Former-commit-id: ac07b55db4ad01ef1ed70dcb21171a1d482fdeb6

--- a/new/theme/2020/templates/menu.html
+++ b/new/theme/2020/templates/menu.html
@@ -27,7 +27,7 @@
               alt="Young hacker smiling">
             </label>
         </div>
-        <div class="overlay overlay-hugeinc bg-white fixed w-100 h-100 top-0 left-0 z-100 overflow-y-hidden-l overflow-y-auto">
+        <div class="overlay overlay-hugeinc bg-white fixed w-100 h-100 top-0 left-0 z-100 overflow-y-auto">
           <div class="mw9 tr ml-auto mr-auto ph3">
             <label for="op" class="mr5-l right-small">
               <img
@@ -36,7 +36,7 @@
                 alt="Young hacker smiling">
             </label>
           </div>
-          <nav class="h-100-l relative tc t-50 ty-50 ">
+          <nav class="h-50-l relative tc t-30 ty-50 ">
             <ul class="o-40 menu-trans dib h-100 list ma0 pa0 relative tl w5">
               <div class="products-menu h-maxcontent">
                 <li class="db pb2">
@@ -92,12 +92,66 @@
                   </div>
                 </li>
               </div>
-              <li class="db h2">
-                <a href="{{ SITEURL }}/about-us/"
-                   class="hv-fluid-rd f3 c-fluid-bk fw3 no-underline menu-txt-trans roboto">
-                  About Us
-                </a>
-              </li>
+              <div class="aboutus-menu h-maxcontent">
+                <li class="db pb2">
+                  <input class="dn" type="radio" name="menu3" id="aboutus-title">
+                  <label for="aboutus-title" class="pointer hv-fluid-rd f3 c-fluid-bk fw3 menu-txt-trans roboto">
+                    About Us <div class="dib w1"><img src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/arrow-down.svg" alt="arrow down"></div></label>
+                  </a>
+                  <div class="aboutus-list pv2 dn">
+                    <ul class="list">
+                      <li class="pv2">
+                        <a class="hv-fluid-rd f4 c-fluid-bk fw1 no-underline menu-txt-trans roboto pv"
+                           href="{{ SITEURL }}/about-us/certifications/">
+                            Certifications
+                        </a>
+                      </li>
+                      <li class="pv2">
+                        <a class="hv-fluid-rd f4 c-fluid-bk fw1 no-underline menu-txt-trans roboto"
+                           href="{{ SITEURL }}/about-us/differentiators/">
+                            Differentiators
+                        </a>
+                      </li>
+                      <li class="pv2">
+                        <a class="hv-fluid-rd f4 c-fluid-bk fw1 no-underline menu-txt-trans roboto"
+                           href="{{ SITEURL }}/about-us/values/">
+                            Values
+                        </a>
+                      </li>
+                      <li class="pv2">
+                        <a class="hv-fluid-rd f4 c-fluid-bk fw1 no-underline menu-txt-trans roboto"
+                           href="{{ SITEURL }}/about-us/reviews/">
+                            Reviews
+                        </a>
+                      </li>
+                      <li class="pv2">
+                        <a class="hv-fluid-rd f4 c-fluid-bk fw1 no-underline menu-txt-trans roboto"
+                           href="{{ SITEURL }}/resources/">
+                            Resources
+                        </a>
+                      </li>
+                      <li class="pv2">
+                        <a class="hv-fluid-rd f4 c-fluid-bk fw1 no-underline menu-txt-trans roboto"
+                           href="{{ SITEURL }}/about-us/events/">
+                            Events
+                        </a>
+                      </li>
+                      <li class="pv2">
+                        <a class="hv-fluid-rd f4 c-fluid-bk fw1 no-underline menu-txt-trans roboto"
+                           href="{{ SITEURL }}/about-us/people/">
+                            People
+                        </a>
+                      </li>
+                      <li class="pv2">
+                        <a class="hv-fluid-rd f4 c-fluid-bk fw1 no-underline menu-txt-trans roboto"
+                           href="{{ SITEURL }}/about-us/partners/">
+                            Partners
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                </li>
+              </div>
               <li class="db h2 mb5">
                 <a href="#"
                    class="hv-fluid-rd f3 c-fluid-bk fw3 no-underline menu-txt-trans roboto">
