--- a/new/theme/2020/templates/menu.html
+++ b/new/theme/2020/templates/menu.html
@@ -85,7 +85,7 @@
                       <li class="pv2">
                         <a class="hv-fluid-rd f4 c-fluid-bk fw1 no-underline menu-txt-trans roboto"
                            href="{{ SITEURL }}/use-cases/one-shot/">
-                           One-shot Hackng
+                           One-shot Hacking
                           </a>
                       </li>
                     </ul>
