feat(front): #3288.2 careers list in menu
Former-commit-id: bd91600b21d72ec8b3e25a0b47c2b33d7f2044f8

--- a/new/theme/2020/templates/menu.html
+++ b/new/theme/2020/templates/menu.html
@@ -164,12 +164,54 @@
                   Contact
                 </a>
               </li>
-              <li class="db h2">
-                <a href="{{ SITEURL }}/careers/"
-                   class="hv-fluid-rd f3 c-fluid-bk fw3 no-underline menu-txt-trans roboto">
-                  Careers
-                </a>
-              </li>
+              <div class="aboutus-menu h-maxcontent">
+                <li class="db pb2">
+                  <input class="dn" type="radio" name="menu3" id="careers-title">
+                  <label for="careers-title" class="pointer hv-fluid-rd f3 c-fluid-bk fw3 menu-txt-trans roboto">
+                    Careers <div class="dib w1"><img src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/arrow-down.svg" alt="arrow down"></div></label>
+                  </a>
+                  <div class="careers-list pv2 dn">
+                    <ul class="list">
+                      <li class="pv2">
+                        <a class="hv-fluid-rd f4 c-fluid-bk fw1 no-underline menu-txt-trans roboto pv"
+                           href="{{ SITEURL }}/careers/openings/">
+                            Openings
+                        </a>
+                      </li>
+                      <li class="pv2">
+                        <a class="hv-fluid-rd f4 c-fluid-bk fw1 no-underline menu-txt-trans roboto"
+                           href="{{ SITEURL }}/careers/terms/">
+                            Terms
+                        </a>
+                      </li>
+                      <li class="pv2">
+                        <a class="hv-fluid-rd f4 c-fluid-bk fw1 no-underline menu-txt-trans roboto"
+                           href="{{ SITEURL }}/careers/knowledge-test/">
+                            Knowledge Test
+                        </a>
+                      </li>
+                      <li class="pv2">
+                        <a class="hv-fluid-rd f4 c-fluid-bk fw1 no-underline menu-txt-trans roboto"
+                           href="{{ SITEURL }}/careers/technical-challenges/">
+                            Technical Challenges
+                        </a>
+                      </li>
+                      <li class="pv2">
+                        <a class="hv-fluid-rd f4 c-fluid-bk fw1 no-underline menu-txt-trans roboto"
+                           href="{{ SITEURL }}/careers/non-technical-challenges/">
+                            Non-Technical Challenges
+                        </a>
+                      </li>
+                      <li class="pv2">
+                        <a class="hv-fluid-rd f4 c-fluid-bk fw1 no-underline menu-txt-trans roboto"
+                           href="{{ SITEURL }}/careers/immersion/">
+                            Immersion
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                </li>
+              </div>
               <li class="db h2">
                 <a href="#"
                    class="hv-fluid-rd f3 c-fluid-bk fw3 no-underline menu-txt-trans roboto">
