fix(front): #3292 padding right in blog index
Former-commit-id: 29b546a605327c9e16d36231e5d59f818b912aee

--- a/new/theme/2020/templates/index.html
+++ b/new/theme/2020/templates/index.html
@@ -48,7 +48,7 @@ Blog | {{ SITENAME }}
 
 {% block content %}
  <!-- Div Index -->
- <div class="roboto flex-ns flex-wrap-ns justify-between-m pt5 pb3 pl2 pr0 bg-graylight">
+ <div class="roboto flex-ns flex-wrap-ns justify-between-m pt5 pb3 ph2 bg-graylight">
   <!-- Blog Posts -->
   {% for article in articles_page.object_list %}
     <div
