fix(front): #3293 padding bottom in blog cards
Former-commit-id: 641ff2c6e7d249a8177ae263961259637d99040c

--- a/new/theme/2020/templates/index.html
+++ b/new/theme/2020/templates/index.html
@@ -115,7 +115,7 @@ Blog | {{ SITENAME }}
         </p>
         <br><br>
         <!-- Read More Button -->
-        <div class="divread bottom-2 pb3 absolute-l tc right-0 left-0">
+        <div class="divread bottom-2 pb3 absolute-l tc right-0 left-0 pb4">
           <span class="br2 bannerbt hv-bt-fluid-rd ph4-l ph5 pv2 bt-trans white b roboto pointer">
             <a href="{{ SITEURL }}/{{ article.url }}"
                class="b f5 no-underline white">
