fix(front): #3294 margin in breadcrumb
Former-commit-id: f5c020aa4d7d6cbf6d733273fd9bb6e7741f6fd9

--- a/new/theme/2020/templates/index.html
+++ b/new/theme/2020/templates/index.html
@@ -27,7 +27,7 @@ Blog | {{ SITENAME }}
 <div class="pv0">
   <!-- navcontent-info -->
   <div class="df ma-auto bg-fluid-black">
-    <div class="roboto f6-l f7 tl mw-banner ml-auto mr-auto">
+    <div class="roboto f6-l f7 tl mw-banner">
       <ul class="dib list w-100">
         <li class="dib mt0">
           <a class="c-fluid-gray hover-white no-underline"
